XIVY-6594 Rename beans to contain "IvyDevWf"

--- a/workflow-ui/webContent/includes/components/allTasksTable.xhtml
+++ b/workflow-ui/webContent/includes/components/allTasksTable.xhtml
@@ -4,33 +4,33 @@
   xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions"
   xmlns:jc="http://java.sun.com/jsf/composite/components">
 
-  <p:dataTable id="tasks" var="task" value="#{tasksBean.tasksDataModel}" widgetVar="tasksTable" style="margin-top:10px"
+  <p:dataTable id="tasks" var="task" value="#{tasksIvyDevWfBean.tasksDataModel}" widgetVar="tasksTable" style="margin-top:10px"
     emptyMessage="No Tasks found with given criteria" lazy="true" paginatorPosition="bottom" rowsPerPageTemplate="10,20,50"
     rows="10" paginator="true" paginatorAlwaysVisible="false" sortBy="#{task.startTimestamp}" sortOrder="descending"
     selectionMode="single"
     paginatorTemplate="{RowsPerPageDropdown} {FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}">
-    <p:ajax event="rowSelect" listener="#{tasksBean.displayTaskRow}" update="@form" />
+    <p:ajax event="rowSelect" listener="#{tasksIvyDevWfBean.displayTaskRow}" update="@form" />
     <f:facet name="header">
       <p:outputPanel>
         <h:outputText value="Search:" />
         <p:inputText id="tasksFilter" onkeyup="PF('tasksTable').filter()" style="width:150px"
-          placeholder="Enter keyword" value="#{tasksBean.tasksDataModel.filter}" />
+          placeholder="Enter keyword" value="#{tasksIvyDevWfBean.tasksDataModel.filter}" />
       </p:outputPanel>
     </f:facet>
 
     <p:column filterBy="#{task.state}" styleClass="icon-row" sortBy="#{task.state}">
-      <h:outputText id="taskState" styleClass="si si-lg si-#{tasksBean.getStateIcon(task.state)}" />
+      <h:outputText id="taskState" styleClass="si si-lg si-#{tasksIvyDevWfBean.getStateIcon(task.state)}" />
       <p:tooltip for="taskState" value="State: #{task.state}" position="top" />
     </p:column>
 
     <p:column id="priority" filterBy="#{task.priority}" styleClass="icon-row" sortBy="#{task.priority}">
-      <h:outputText id="taskPrio" styleClass="si si-lg si-#{tasksBean.getPriorityIcon(task.priority)}" />
+      <h:outputText id="taskPrio" styleClass="si si-lg si-#{tasksIvyDevWfBean.getPriorityIcon(task.priority)}" />
       <p:tooltip for="taskPrio" value="Priority: #{task.priority}" position="top" />
     </p:column>
 
     <p:column headerText="Name" filterBy="#{task.name}" sortBy="#{task.name}">
-      <h:commandLink action="#{tasksBean.redirectToTaskDetails(task.id)}">
-        <h:outputText id="taskName" value="#{tasksDetailsBean.getName(task)}" />
+      <h:commandLink action="#{tasksIvyDevWfBean.redirectToTaskDetails(task.id)}">
+        <h:outputText id="taskName" value="#{tasksDetailsIvyDevWfBean.getName(task)}" />
         <p:tooltip for="taskName" value="Task ID: #{task.id}" position="top" />
       </h:commandLink>
     </p:column>
