--- a/workflow-ui/webContent/includes/components/caseDetails/caseMap.xhtml
+++ b/workflow-ui/webContent/includes/components/caseDetails/caseMap.xhtml
@@ -5,7 +5,7 @@
 
   <div class="ui-g-12 u-padding-0">
     <div class="case-map-container">
-      <p:repeat var="stage" value="#{casesDetailsBean.caseMap.stages}" varStatus="count">
+      <p:repeat var="stage" value="#{casesDetailsIvyDevWfBean.caseMap.stages}" varStatus="count">
         <h:panelGroup styleClass="case-map-column">
           <div class="case-map-icon-container">
             <i class="case-map-icon #{stage.iconCss} #{stage.stateCss}" />
@@ -23,7 +23,7 @@
           </span>
         </h:panelGroup>
       </p:repeat>
-      <c:if test="#{empty casesDetailsBean.caseMap.stages}">
+      <c:if test="#{empty casesDetailsIvyDevWfBean.caseMap.stages}">
         <h:outputText value="No Case Map found" />
       </c:if>
     </div>
