--- a/workflow-ui/webContent/includes/components/caseDetails/customFields.xhtml
+++ b/workflow-ui/webContent/includes/components/caseDetails/customFields.xhtml
@@ -3,7 +3,7 @@
   xmlns:c="http://xmlns.jcp.org/jsp/jstl/core" xmlns:ic="http://ivyteam.ch/jsf/component"
   xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions">
 
-  <p:dataTable id="customFieldsTable" var="field" value="#{casesDetailsBean.customFields}">
+  <p:dataTable id="customFieldsTable" var="field" value="#{casesDetailsIvyDevWfBean.customFields}">
     <p:column headerText="Name">
       <h:outputText value="#{field.name}"/>
     </p:column>
