--- a/workflow-ui/webContent/view/frame.xhtml
+++ b/workflow-ui/webContent/view/frame.xhtml
@@ -6,7 +6,7 @@
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
       <div class="card custom-card">
-        <iframe id="iFrame" src="#{frameBean.taskUrl}"
+        <iframe id="iFrame" src="#{frameIvyDevWfBean.taskUrl}"
           style="height: calc(100vh - 195px); width: 100%; border: 0;"></iframe>
       </div>
       <script>
