--- a/workflow-ui/webContent/view/loginTable.xhtml
+++ b/workflow-ui/webContent/view/loginTable.xhtml
@@ -5,11 +5,11 @@
 
 <h:body>
   <f:metadata>
-    <f:viewParam name="originalUrl" value="#{loginBean.originalUrl}"/>
+    <f:viewParam name="originalUrl" value="#{loginIvyDevWfBean.originalUrl}"/>
   </f:metadata>
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
-      <h:panelGroup layout="block" styleClass="static-message" rendered="#{!loginBean.loggedIn}">
+      <h:panelGroup layout="block" styleClass="static-message" rendered="#{!loginIvyDevWfBean.loggedIn}">
         <p:staticMessage severity="warn" summary="Warning" detail="You need to login to access that page" id="loginMessage"/>
       </h:panelGroup>
       <ui:include src="/includes/components/userTable.xhtml"/>
