--- a/workflow-ui/webContent/includes/components/caseDetails/documents.xhtml
+++ b/workflow-ui/webContent/includes/components/caseDetails/documents.xhtml
@@ -4,7 +4,7 @@
   xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions">
 
   <ul class="custom-list">
-    <ui:repeat var="document" value="#{casesDetailsBean.documents}">
+    <ui:repeat var="document" value="#{casesDetailsIvyDevWfBean.documents}">
       <li class="document-entry" style="list-style-type: none;">
         <span class="margin-right-5 si si-lg si-#{document.icon}"/>
         <h:commandLink value="#{document.name}">
@@ -13,7 +13,7 @@
       </li>
     </ui:repeat>
   </ul>
-  <c:if test="#{empty casesDetailsBean.documents}">
+  <c:if test="#{empty casesDetailsIvyDevWfBean.documents}">
     <h:outputText value="No Documents found" />
   </c:if>
 
