--- a/workflow-ui/webContent/includes/template/topbar.xhtml
+++ b/workflow-ui/webContent/includes/template/topbar.xhtml
@@ -12,24 +12,24 @@
         <li id="sessionUser" class="profile-item">
           <a href="#">
             <span class="profile-image-wrapper"> <i class="si si-single-neutral-circle" style="font-size: 36px; padding: 2px"></i>
-            </span><h:outputText id="sessionUserName" class="topbar-item-name profile-name" value="#{userBean.currentUserName}" />
+            </span><h:outputText id="sessionUserName" class="topbar-item-name profile-name" value="#{userIvyDevWfBean.currentUserName}" />
           </a>
           <ul class="animated" style="right: 5px">
             <li role="menuitem">
-              <p:commandLink id="loginTableBtn" actionListener="#{loginBean.redirectToLoginTable}" rendered="#{engineModeBean.demoOrDesigner}">
+              <p:commandLink id="loginTableBtn" actionListener="#{loginIvyDevWfBean.redirectToLoginTable}" rendered="#{engineModeIvyDevWfBean.demoOrDesigner}">
                 <i class="si si-lg si-multiple-neutral-1"></i>
                 <span>Switch user</span>
               </p:commandLink>
             </li>
             <li role="menuitem">
-              <p:commandLink id="loginFormBtn" actionListener="#{loginBean.redirectToLoginForm}">
+              <p:commandLink id="loginFormBtn" actionListener="#{loginIvyDevWfBean.redirectToLoginForm}">
                 <i class="si si-lg si-login-3"></i>
                 <span>Login</span>
               </p:commandLink>
             </li>
             <li role="menuitem">
-              <p:commandLink id="sessionLogoutBtn" actionListener="#{loginBean.logout}"
-                rendered="#{!userBean.sessionUserUnknown}">
+              <p:commandLink id="sessionLogoutBtn" actionListener="#{loginIvyDevWfBean.logout}"
+                rendered="#{!userIvyDevWfBean.sessionUserUnknown}">
                 <i class="si si-lg si-logout-1"></i><span>Logout</span>
               </p:commandLink>
             </li>
