--- a/workflow-ui/webContent/view/cleanup.xhtml
+++ b/workflow-ui/webContent/view/cleanup.xhtml
@@ -5,7 +5,7 @@
 <h:body>
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
-      <f:event type="preRenderView" listener="#{loginBean.redirectIfNotLoggedIn}" />
+      <f:event type="preRenderView" listener="#{loginIvyDevWfBean.redirectIfNotLoggedIn}" />
       <h:form id="clanupForm">
         <p:growl id="growl" showDetail="true" />
         <h:panelGroup styleClass="card card-w-title custom-card cleanup-container" layout="block">
@@ -16,10 +16,10 @@
             <h:outputText value="When you click throuh different processes you create different types of data like cases, tasks etc. Here you can clean that data to reset your designer."/>
           </p:outputPanel>
           <p:panelGrid columns="1" layout="grid" styleClass="ui-panelgrid-blank main-starts-container">
-            <p:selectBooleanCheckbox id="casesAndTasksCheckbox" value="#{cleanupBean.casesTasksAndDependent}" itemLabel="All Cases, Tasks and dependent objects" />
-            <p:selectBooleanCheckbox id="businessDataCheckbox" value="#{cleanupBean.businessDataAndSearchIndex}" itemLabel="All Business Data and the search index" />
-            <p:selectBooleanCheckbox id="identityProviderTokenCheckbox" value="#{cleanupBean.identityProviderTokens}" itemLabel="All identity provider tokens" />
-            <p:commandButton id="cleanupBtn" value="Cleanup" icon="si si-recycling-trash-bin-2 " actionListener="#{cleanupBean.cleanup}" update="growl" disabled="#{!adminBean.isWorkflowAdmin() or !engineModeBean.demoOrDesigner}"/>
+            <p:selectBooleanCheckbox id="casesAndTasksCheckbox" value="#{cleanupIvyDevWfBean.casesTasksAndDependent}" itemLabel="All Cases, Tasks and dependent objects" />
+            <p:selectBooleanCheckbox id="businessDataCheckbox" value="#{cleanupIvyDevWfBean.businessDataAndSearchIndex}" itemLabel="All Business Data and the search index" />
+            <p:selectBooleanCheckbox id="identityProviderTokenCheckbox" value="#{cleanupIvyDevWfBean.identityProviderTokens}" itemLabel="All identity provider tokens" />
+            <p:commandButton id="cleanupBtn" value="Cleanup" icon="si si-recycling-trash-bin-2 " actionListener="#{cleanupIvyDevWfBean.cleanup}" update="growl" disabled="#{!adminIvyDevWfBean.isWorkflowAdmin() or !engineModeIvyDevWfBean.demoOrDesigner}"/>
           </p:panelGrid>
         </h:panelGroup>
       </h:form>
